# axiomguard

./: .cloudbuild.yaml  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.cp  LICENSE  README.md  config.production.toml  config.toml  docker-compose.yml  fly.toml  prometheus.yml  test-mcp-stdio.sh
.cargo/: config
.github/workflows/: docs.yml  release-mcp.yml
benchmark/: Cargo.toml  benches.toml
benchmark/benches/: benchmark.rs
benchmark/src/: lib.rs
client/: Cargo.toml
client-cli/: Cargo.toml
client-cli/src/: main.rs
client/src/: lib.rs
common/: Cargo.toml
common/migrations/: 001_initial_schema.sql  002_production_schema.sql  003_event_listen_notify.sql  004_timescale_hypertables.sql
common/src/: lib.rs  metrics.rs  telemetry.rs  webhooks.rs
common/src/database/: config.rs  connection.rs  migrations.rs  mod.rs  repository.rs  repository_v2.rs  tenant_repository.rs
control-plane/: Cargo.toml
control-plane/src/: api.rs  auth.rs  config.rs  db.rs  main.rs  metrics.rs  rate_limit.rs  state.rs  utils.rs
control-plane/src/agent/: mod.rs
control-plane/src/analyst/: mod.rs
control-plane/src/policy/: mod.rs
control-plane/src/token/: keys.rs  mod.rs  revocation.rs
docs/: book.toml
docs/src/: AGENT_MANAGEMENT_DESIGN.md  ARCHITECTURE_REVIEW.md  ARCHITECTURE_V4.md  BENCHMARK_V4.md  CLAUDE.md  DATABASE_SCHEMA.md  DETERMINISTIC_RULES.md  ML_LAYER.md  OPEX_ANALYSIS.md  PIVOT_ANALYSIS.md  ROUTING_STRATEGY.md  SECURITY_TIERS.md  SUMMARY.md  V4_IMPLEMENTATION_PLAN.md  introduction.md
docs/src/integrations/: openclaw.md
docs/src/operations/: cost-model.md
engine/: Cargo.toml
engine/src/: ai.rs  circuit_breaker.rs  concurrency_tests.rs  event_broadcaster.rs  explainability.rs  lib.rs  ml_layer.rs  pii.rs  quota.rs  retention.rs  retry_queue.rs  routing.rs  rule_sync.rs  shutdown.rs  tool_parser.rs  z3_engine.rs
engine/src/jsonlogic/: mod.rs  operators.rs
engine/src/z3/: mod.rs
examples/crewai/: crewai_guard.py
examples/openai-agents/: openai_agents_guard.py
infra/: main.tf  variables.tf
infra/monitoring/: alerts.tf  dashboards.tf  main.tf  outputs.tf  variables.tf
k8s/: README.md  configmap.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  postgres.yaml  proxy.yaml  retention-cronjob.yaml  retention-rbac.yaml  secret.yaml  shield.yaml
mcp-server/: Cargo.toml
mcp-server/src/: config.rs  main.rs  metrics.rs  prompts.rs  server.rs  tools.rs
ml/: Cargo.toml
ml/src/: lib.rs
ml/src/embedding/: mod.rs
ml/src/injection/: mod.rs  patterns.rs
ml/src/pii/: mod.rs  regex_layer.rs
mock-api/: mock-data.js  package-lock.json  package.json  server.js
npm/: .gitignore  index.js  install.js  package.json
operator-dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
operator-dashboard/src/: index.css  main.tsx
operator-dashboard/src/api/: agents.ts  analytics.ts  audit.ts  bypass-alerts.ts  client.ts  keys.ts  rules.ts  sessions.ts  settings.ts
operator-dashboard/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  Input.tsx  Modal.tsx  Progress.tsx  Select.tsx  Skeleton.tsx  Table.tsx  Tabs.tsx  index.ts
operator-dashboard/src/lib/: utils.ts
operator-dashboard/src/pages/: Agents.tsx  Analytics.tsx  Audit.tsx  BypassAlerts.tsx  Keys.tsx  Login.tsx  Rules.tsx  Sessions.tsx
operator-dashboard/src/store/: auth.ts
operator-dashboard/src/types/: index.ts
operator-dashboard/src/utils/: index.ts
plugins/openclaw/: README.md  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
plugins/openclaw/__test__/: config.test.ts  hook.test.ts  integration.test.ts  session-tracker.test.ts  standalone.test.ts  tool-map.test.ts
plugins/openclaw/src/: config.ts  hook.ts  index.ts  openclaw-plugin-sdk.d.ts  openclaw.d.ts  session-tracker.ts  standalone.ts  tool-map.ts  types.ts
proto/: Cargo.toml  build.rs
proto/src/: audit.proto  lib.rs  shield.proto
proxy/: Cargo.toml
proxy/src/: config.rs  lib.rs  shield_client.rs  sse.rs  websocket.rs
scripts/: run-migrations.sh
sdk/: Cargo.toml
sdk-node/: .gitignore  Cargo.toml  index.d.ts  index.js  package.json
sdk-node-runtime/: README.md  guard.js  index.d.ts  index.js  package.json  runtime.js
sdk-node/src/: lib.rs
sdk-py/: .gitignore  Cargo.toml  pyproject.toml
sdk-py-runtime/: README.md  pyproject.toml
sdk-py-runtime/python/axiomguard_runtime/: __init__.py  guard.py
sdk-py/examples/: multi_agent_bank.py
sdk-py/python/axiomguard/: __init__.py  guard.py
sdk-py/src/: lib.rs
sdk-wasm/: .gitignore  Cargo.toml
sdk-wasm/src/: lib.rs
sdk/benches/: pipeline.rs  session.rs
sdk/src/: audit_buffer.rs  integrity.rs  lib.rs  pii.rs  pipeline.rs  policy_cache.rs  schema.rs  session.rs  tool_parser.rs  types.rs
sdk/src/jsonlogic/: mod.rs  operators.rs
sdk/tests/: integration_reliability.rs
security/bypass_suite/: Cargo.toml  main.rs
service/: Cargo.toml
service-cli/: Cargo.toml  Dockerfile  fly.toml
service-cli/src/: main.rs
service/src/: auth.rs  config.rs  lib.rs  metrics_server.rs  shield_service.rs
tool-wrappers/common/: Cargo.toml
tool-wrappers/common/src/: lib.rs
tool-wrappers/exec/: Cargo.toml
tool-wrappers/exec/src/: lib.rs
tool-wrappers/file/: Cargo.toml
tool-wrappers/file/src/: lib.rs
tool-wrappers/http/: Cargo.toml
tool-wrappers/http/src/: lib.rs
