[package]
name = "client-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Client library
client = { path = "../client" }
common = { path = "../common" }

# Command line arguments
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }

# Futures utilities
futures-util = "0.3"