[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serde for serialization/deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"
dotenv = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Metrics
prometheus = "0.13"

# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for webhooks
reqwest = { version = "0.11", features = ["json", "native-tls"] }

# Hashing for webhook signatures
sha2 = "0.10"
hex = "0.4"

# Random for jitter
rand = "0.8"

# CPU detection
num_cpus = "1.0"
metrics = "0.24.3"
hmac = "0.12.1"

# Database - PostgreSQL with pgvector
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "chrono", "uuid", "json"] }
once_cell = "1.21.4"
regex = "1.9"
pgvector = { version = "0.4", features = ["sqlx"] }
