[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Common types
common = { path = "../common" }
proto = { path = "../proto" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# AI Integration
reqwest = { version = "0.11", features = ["json"] }

# Regular expressions
regex = "1.9"

# Concurrent processing
rayon = "1.7"

# Metrics
prometheus = "0.13"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }
thiserror = "2.0.18"
futures = "0.3.32"
rand = "0.10.0"

# PII detection
once_cell = "1.18"

# Async traits
async-trait = "0.1"

# LRU cache for decisions
lru = "0.12"

# High-performance concurrent cache
moka = { version = "0.12", features = ["sync"] }

# Concurrent HashMap
dashmap = "5.5"

# Hashing
sha2 = "0.10"

# Database (for LISTEN/NOTIFY and repositories)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }

# Semantic embeddings
fastembed = "4"

# ML capabilities (PII, injection detection, risk scoring)
axiomguard-ml = { path = "../ml" }

# Z3 SMT Solver for formal verification
z3 = "0.18.0"
