[package]
name = "mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace crates
proxy = { path = "../proxy" }
common = { path = "../common" }
proto = { path = "../proto" }

# MCP SDK
rmcp = { version = "1.4", features = ["server", "transport-io", "server-side-http", "transport-streamable-http-server", "macros"] }
schemars = "0.8"

# gRPC
tonic = { workspace = true }
prost-types = { workspace = true }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging & tracing
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.4", features = ["v4", "serde"] }

# Cache
lru = "0.12"
moka = { version = "0.12", features = ["sync"] }

# Metrics
prometheus = "0.13"

# Constant-time comparison
subtle = "2.6"

# Cancellation tokens
tokio-util = "0.7"

# HTTP types (for SSE transport)
http = "1.0"
axum = { version = "0.7", features = ["ws", "http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

[dev-dependencies]
tokio-test = "0.4"
