[package]
name = "axiomguard-ml"
version = "0.1.0"
edition = "2021"
description = "AI/ML capabilities for AxiomGuard — PII sanitization, prompt injection detection, semantic risk scoring"

[features]
default = ["regex-engine"]
regex-engine = ["regex", "once_cell"]
full = ["regex-engine"]  # Candle models will be added when models are available

[dependencies]
# Core ML (optional, for future model loading)
# candle-core = { version = "0.8", optional = true }
# candle-nn = { version = "0.8", optional = true }
# candle-transformers = { version = "0.8", optional = true }
# tokenizers = { version = "2", optional = true }

# Regex engine (always available)
regex = { version = "1", optional = true }
once_cell = { version = "1", optional = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

[dev-dependencies]
criterion = "0.5"

# [[bench]]
# name = "ml_benchmarks"
# harness = false
