[package]
name = "proto"
version = "0.1.0"
edition = "2021"

[dependencies]
# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }

# gRPC
tonic = { workspace = true }

# Common types
common = { path = "../common" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.4", features = ["v4", "serde"] }

[build-dependencies]
tonic-build = "0.9"