[package]
name = "axiomguard-sdk-py"
version = "0.1.0"
edition = "2021"
description = "AxiomGuard Python SDK — PyO3 bindings for token verification and args hashing"

[lib]
name = "_axiomguard_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
ag-tool-common = { path = "../tool-wrappers/common" }
serde_json = "1.0"
