[package]
name = "axiomguard-sdk-wasm"
version = "0.1.0"
edition = "2021"
description = "AxiomGuard WASM SDK — browser/edge guard pipeline"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }

[dependencies.ed25519-dalek]
version = "2.1"
default-features = false
features = ["std", "rand_core"]

[dev-dependencies]
wasm-bindgen-test = "0.3"
