[package]
name = "axiomguard-sdk"
version = "0.1.0"
edition = "2021"
description = "AxiomGuard in-process SDK — sub-100ms AI agent guardrail enforcement"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Logging
tracing = "0.1"

# Hashing
sha2 = "0.10"

# Regex (PII detection)
regex = "1.9"
once_cell = "1.18"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.4", features = ["v4", "serde"] }

# Secret zeroing
zeroize = { version = "1.8", features = ["derive"] }

# High-performance concurrent cache
moka = { version = "0.12", features = ["sync"] }

# AES-256-GCM for policy cache encryption
aes-gcm = "0.10"
base64 = "0.22"

# Errors
thiserror = "2.0"

# HTTP client (session hydration from CP)
reqwest = { version = "0.12", features = ["json"], optional = true }

[features]
default = ["hydration"]
hydration = ["reqwest"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "session"
harness = false
