[package]
name = "axiomguard-bypass-suite"
version = "0.1.0"
edition = "2021"
description = "AxiomGuard security bypass test suite"

[[test]]
name = "bypass_suite"
path = "main.rs"

[dependencies]
ag-tool-common = { path = "../../tool-wrappers/common" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
