[package]
name = "ag-tool-common"
version = "0.1.0"
edition = "2021"
description = "AxiomGuard tool wrapper shared library — token verification, args hashing, bypass reporting"

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
tracing = "0.1"
subtle = "2.6"
